# arcana.cpp

./: .gitignore  .gitmodules  Android.props  CMakeLists.txt  CONTRIBUTING.md  License.md  NOTICE.txt  README.md  Windows.props  arcana.cpp.component.json  directory.build.props
.github/workflows/: ci.yml
Source/: Arcana.Cpp.sln  Arcana.Tasks.md  Arcana.md
Source/Android/: Arcana.Android.vcxproj
Source/Android/arcana/threading/: task_schedulers.h
Source/Android/arcana/tracing/: trace_region.h
Source/Apple/arcana/threading/: task_schedulers.h
Source/Apple/arcana/tracing/: trace_region.h
Source/Shared/: Arcana.vcxitems
Source/Shared.Test/: AlgorithmUnitTest.cpp  Arcana.Test.vcxitems  ExpectedUnitTest.cpp  InplaceFunctionUnitTest.cpp  IteratorUnitTest.cpp  TypeTraitsTest.cpp
Source/Shared.Test/Containers/: ContainerUnitTest.cpp
Source/Shared.Test/Experimental/: ArrayUnitTest.cpp
Source/Shared.Test/Messaging/: MediatorUnitTest.cpp
Source/Shared.Test/Scheduling/: SchedulingUnitTest.cpp
Source/Shared.Test/Threading/: CoroutineTests.cpp  DispatcherUnitTest.cpp  TaskUnitTest.cpp
Source/Shared/arcana/: algorithm.h  expected.h  finally_scope.h  iterators.h  macros.h  math.h  sentry.h  string.h  type_traits.h
Source/Shared/arcana/containers/: lazy.h  sorted_vector.h  ticketed_collection.h  unique_vector.h  weak_table.h
Source/Shared/arcana/experimental/: array.h
Source/Shared/arcana/functional/: inplace_function.h
Source/Shared/arcana/messaging/: mediator.h  router.h
Source/Shared/arcana/scheduling/: state_machine.h  state_machine_state.h
Source/Shared/arcana/threading/: affinity.h  blocking_concurrent_queue.h  cancellation.h  coroutine.h  dispatcher.h  pending_task_scope.h  task.h
Source/Shared/arcana/threading/internal/: callable_traits.h  internal_task.h
Source/UWP/: Arcana.UWP.Reference.vcxitems  Arcana.UWP.vcxproj
Source/UWP.Test/: Arcana.UWP.Test.vcxproj
Source/UWP.Test/Threading/: TaskSchedulersTests.cpp
Source/UWP/arcana/: hresult.h
Source/UWP/arcana/containers/: unordered_bimap.h
Source/UWP/arcana/threading/: set_thread_name.cpp  set_thread_name.h  task_schedulers.cpp
Source/Unix/arcana/threading/: task_schedulers.h
Source/Unix/arcana/tracing/: trace_region.h
Source/Win32/: Arcana.Win32.vcxitems
Source/Win32.Test/: Arcana.Win32.Test.vcxproj  ExceptionsTests.cpp
Source/Win32/arcana/: win32_exception.h
Source/Win32/arcana/threading/: task_schedulers.h
Source/Windows/: Arcana.Windows.Reference.vcxitems  Arcana.Windows.vcxproj
Source/Windows.Test/: Arcana.Windows.Test.vcxproj  HresultTest.cpp
Source/Windows.Test/Threading/: CancellationMemoryLeakTest.cpp  TaskConversionsTests.cpp  TaskSchedulersTests.cpp
Source/Windows/arcana/: hresult.cpp
Source/Windows/arcana/threading/: set_thread_name.cpp  set_thread_name.h  task_conversions.h  task_schedulers.cpp  task_schedulers.h
Source/Windows/arcana/tracing/: trace_region.h
